--- a/index.html
+++ b/index.html
@@ -5,4 +5,19 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <a>Download Excursion (Coming soon!)</a>
+    <p>
+        <video src="resources/videos/excursion.mp4" autoplay loop muted>
+            Video not supported.
+        </video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+    <p>
+        <img src="resources/images/camp.jpg">
+    </p>
+    <p>
+        <img src="resources/images/phone.png">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a>Download Excursion (Coming soon!)</a>
 </body>
