Add footer and CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="resources/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
@@ -21,3 +21,6 @@
     <h2>Coming Soon for iPhone and Android</h2>
     <a>Download Excursion (Coming soon!)</a>
 </body>
+<footer>
+    <h4>© Excursion</h4>
+</footer>
